# mintree

./: LICENSE  README.md  minpath.cabal  sample.txt  stack.yaml
src/: Main.hs
