name:                minpath
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cloudmark/minpath#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Galea
maintainer:          mark@gmail.com
copyright:           2018 Mark Galea
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable minpath
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      , safe
